[package]
name = "sqlite-glance"
description = "Conveniently inspect an SQLite database file in the terminal"
readme = "README.md"
version = "0.5.0"
edition = "2021"
authors = [
    "Thomas Kluyver <thomas.kluyver@xfel.eu>",
]
repository = "https://github.com/takluyver/sqlite-glance"
license = "BSD-3-Clause"
categories = ["command-line-utilities", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = "4.3.11"
comfy-table = "7.0.1"
crossterm = "0.26.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
sqlparser = "0.55.0"
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
